# financial-data-validation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: README.md  basic_usage.py  comparing_models.py  custom_validation.py  individual_tests.py
src/financial_data_validation/: __init__.py  utils.py  validator.py
src/financial_data_validation/diagnostics/: arch.py  jarque_bera.py  kolmogorov_smirnov.py  ljung_box.py  runs.py  variance_ratio.py
tests/: test_arch.py  test_jarque_bera.py  test_kolmogorov_smirnov.py  test_ljung_box.py  test_runs.py  test_utils.py  test_validator.py  test_variance_ratio.py
