[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-data-validation"
version = "0.1.1"
description = "Statistical validation for synthetic financial time series"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "QPaths", email = "hello@qpaths.io" }]
keywords = [
    "finance",
    "synthetic-data",
    "validation",
    "time-series",
    "statistical-tests",
    "data-quality",
    "quant",
    "trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=2.0", "scipy>=1.14.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0.0", "pytest-cov>=7.0.0", "ruff>=0.14.0"]

[project.urls]
Homepage          = "https://github.com/qpaths/financial-data-validation"
Documentation     = "https://github.com/qpaths/financial-data-validation#readme"
Repository        = "https://github.com/qpaths/financial-data-validation"
"Bug Tracker"     = "https://github.com/qpaths/financial-data-validation/issues"
"QPaths Platform" = "https://qpaths.io"

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style  = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = "test_*.py"
python_functions = "test_*"
addopts          = "-v --cov=financial_data_validation --cov-report=term-missing"
